# GroceryHelper

./: .firebaserc  README.md  cypress.config.js  firebase.js  firebase.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yaml
backend/: Cargo.toml  cred.json  email_template.html  product.json  test  test.html
backend/src/: api.rs  data.rs  detect.rs  email_sender.rs  main.rs  recipe.rs
coverage/: clover.xml  coverage-final.json  index.html
coverage/GroceryHelper/: index.html  postcss.config.js.html  tailwind.config.js.html
cypress/e2e/: App.cy.js
saved-data/: firebase-export-metadata.json
saved-data/auth_export/: accounts.json
src/: App.css  App.jsx  App.test.jsx  Firebase.js  Theme.jsx  helper.js  index.css
src/Components/: ConfirmModal.jsx  DeleteConfimationModal.jsx  EditModal.jsx  Food.Julia.test.jsx  Food.Xukun.test.jsx  Food.jsx  FoodList.jsx  FoodRecognition.jsx  Footer.Annabel.test.jsx  Footer.Edwards.test.jsx  Footer.Si.test.jsx  Footer.jsx  GroceryAutocomplete.jsx  GroceryForm.jsx  Header.jsx  ImageDropBox.jsx  Kitchen.DooHwan.test.jsx  Kitchen.jsx  OnboardingPopup.jsx  OnboardingPopup.test.jsx  SwipeOptions.css  SwipeOptions.jsx
src/Pages/: CategoryFilter.test.jsx  FridgeFilter.Neel.test.jsx  HomePage.jsx  LoginPage.jsx  LoginPage.test.jsx  LogoutButton.Annabel.test.jsx  LogoutButton.test.jsx  NotificationsButton.Neel.test.jsx  Product.Kim.test.jsx  Product.jsx  Profile.Si.test.jsx  Profile.jsx  add_item.wenxin.test.jsx  no_item_home_page.wenxin.test.jsx
src/assets/: category.json  data.json
(+29 files in other folders)
